#
# k2htpdtor for K2HASH TRANSACTION PLUGIN.
#
# Copyright 2015 Yahoo Japan corporation.
#
# K2HASH TRANSACTION PLUGIN is programable I/F for processing
# transaction data from modifying K2HASH data.
#
# For the full copyright and license information, please view
# the license file that was distributed with this source code.
#
# AUTHOR:   Takeshi Nakatani
# CREATE:   Thu Feb 26 2015
# REVISION:
#

AUTOMAKE_OPTIONS = foreign no-dependencies

man_MANS = k2htpdtor.3 k2htpdtorsvr.1

EXTRA_DIST = $(man_MANS)

#
# VIM modelines
#
# vim:set ts=4 fenc=utf-8:
#
